Fixed alignments in hypland and waybar confs

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -8,11 +8,6 @@
 	font-size: 97%;
 	font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
 	}
-
-	
-	#waybar.empty, #waybar.tiled, #waybar.floating {
-		background-color: transparent;
-	}
 	
 	window#waybar,
 	window#waybar.empty,
@@ -20,6 +15,7 @@
 		background-color: transparent;
 		padding: 0px;
 		border: 0px;
+		margin: 0px;
 	}
 	
 	tooltip {
